--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,11 +11,14 @@
   <%= link_to 'New article', new_article_path %>
 
 
+  <%# This section iterates over each of the articles in the database and give the title and the text %>
   <% @articles.each do |article| %>
     <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
+      <td><%= article.title %></td> <%# this pulls the articles title from the database %>
+      <td><%= article.text %></td>  <%# this pulls the aticles text from the path %>
       <td><%= link_to 'Show', article_path(article) %></td>
     </tr>
   <% end %>
+
+  <%#  End section to iterate over each %>
 </table>
