--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,8 @@
     <tr>
       <td><%= article.title %></td> <%# this pulls the articles title from the database %>
       <td><%= article.text %></td>  <%# this pulls the aticles text from the path %>
-      <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Show', article_path(article) %></td> <%# Leads to the show route for each resource %>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td> <%# leads to the edit route for each sopecific resouce %>
     </tr>
   <% end %>
 
