--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,8 @@
   <%= @article.text %>  <%# This grabs a single articles text and displays it %>
 </p>
 
+<%# Link to the edit route for the selected resource %>
+<td><%= link_to 'Edit', edit_article_path(article) %></td>
 
 <%# This is the link abck to the ALL articles index path %>
 <%= link_to 'Back', articles_path %>
