--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,7 @@
 </p>
 
 <%# Link to the edit route for the selected resource %>
-<td><%= link_to 'Edit', edit_article_path(article) %></td>
+<td><%= link_to 'Edit', edit_article_path(@article) %></td>
 
 <%# This is the link abck to the ALL articles index path %>
 <%= link_to 'Back', articles_path %>
