--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,6 +18,9 @@
       <td><%= article.text %></td>  <%# this pulls the aticles text from the path %>
       <td><%= link_to 'Show', article_path(article) %></td> <%# Leads to the show route for each resource %>
       <td><%= link_to 'Edit', edit_article_path(article) %></td> <%# leads to the edit route for each sopecific resouce %>
+      <td><%= link_to 'Destroy', article_path(article),
+                      method: :delete,
+                      data: { confirm: 'Are you sure?' } %></td>  <%# Delete route for deleting a resource, it confirms it first %>
     </tr>
   <% end %>
 
