adding more to the database by comments crud

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,15 +20,7 @@
 
 <h2>Comments</h2>
 <% @article.comments.each do |comment| %> <%# iterate over all the comments and for each one print the commenter and the body %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
+  <%= render @article.comments %>
 <% end %>
 
 <%# END section to show the comments %>
@@ -38,16 +30,5 @@
 <%# Comment form section %>
 
 <h2>Add a comment:</h2>
-<%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+
+<%= render 'comments/render_comments' %>
